增加Java 微基准测试jmh

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>caffeine</module>
         <module>nginx</module>
+        <module>java-benchmark</module>
     </modules>
 
     <properties>
