--- a/java-benchmark/pom.xml
+++ b/java-benchmark/pom.xml
@@ -23,5 +23,11 @@
             <artifactId>jmh-generator-annprocess</artifactId>
             <version>1.33</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
     </dependencies>
 </project>
