增加Redis单机部署脚本

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>caffeine</module>
         <module>nginx</module>
         <module>java-benchmark</module>
+        <module>redis</module>
     </modules>
 
     <properties>
