--- a/redis/Vagrantfile
+++ b/redis/Vagrantfile
@@ -40,8 +40,9 @@ SCRIPT
 $config_redis = <<-'SCRIPT'
 # 允许redis远程连接
 sudo sed -i 's/bind 127.0.0.1/#bind 127.0.0.1/' /etc/redis.conf
+sudo sed -i 's/protected-mode yes/protected-mode no' /etc/redis.conf
 # 使用密码连接
-sudo sed -i 's/#requirepass foobared/requirepass foobared/' /etc/redis.conf
+sudo sed -i 's/# requirepass foobared/requirepass foobared/' /etc/redis.conf
 SCRIPT
 
 $auto_run_when_centos_start = <<-SCRIPT
