--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>redis</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
