--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>java-benchmark</module>
         <module>redis</module>
         <module>mysql</module>
+        <module>docker</module>
     </modules>
 
     <properties>
