--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>kafka</artifactId>
 
-
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+    </dependencies>
 </project>
