--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>mysql</module>
         <module>docker</module>
         <module>kafka</module>
+        <module>restful</module>
     </modules>
 
     <properties>
