增加工作流 Activiti

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>docker</module>
         <module>kafka</module>
         <module>restful</module>
+        <module>activiti</module>
     </modules>
 
     <properties>
