--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>kafka</module>
         <module>restful</module>
         <module>activiti</module>
+        <module>elastic-job</module>
     </modules>
 
     <properties>
