--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>activiti</module>
         <module>elastic-job</module>
         <module>zookeeper</module>
+        <module>shiro</module>
     </modules>
 
     <properties>
