增加nacos的docker-compose配置

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>zookeeper</module>
         <module>shiro</module>
         <module>netty</module>
+        <module>nacos</module>
     </modules>
 
     <properties>
