新增h2内存数据库

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>shiro</module>
         <module>netty</module>
         <module>nacos</module>
+        <module>h2</module>
     </modules>
 
     <properties>
