--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
     <properties>
 <!--   解决install告警：Using platform encoding (UTF-8 actually) to copy filtered resources, i.e. build is platform dependent!-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
